# spdx-python-model

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yaml  publish.yaml  test.yaml
docs/: index.html
scripts/: build-docs.sh  generate-bindings
spdx/3.1/: spdx-json-serialize-annotations.ttl  spdx-model.ttl
spdx_model/: README.md
spdx_model/3.0.1/: spdx-json-schema.json  spdx-model.ttl
spdx_model/3.1/: spdx-context.jsonld  spdx-json-schema.json
src/spdx_python_model/: __init__.py  protocols.py  version.py
src/spdx_python_model/protocols/: __init__.py  core.py
tests/: test_import.py  test_load.py  test_mypy.py  test_protocols.py
tutorial/: using-spdx3.ipynb
www/: 404.html  index.html
www/tutorial/: spdx-python-model-tutorial.ipynb
