[project]
name = "spdx-python-model"
description = "SPDX Model Python Bindings"
dynamic = ["version"]
dependencies = []
requires-python = ">= 3.9"
authors = [
    {name = "Joshua Watt", email = "JPEWhacker@gmail.com"},
]
readme = "README.md"
keywords = [
    "spdx",
    "sbom",
    "spdx3",
    "software-bill-of-materials",
    "shacl2code",
    "bindings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "mypy >= 1.19.1",
    "pylint >= 3.3.9",
    "pytest >= 7.4",
]

[project.urls]
homepage = "https://spdx.github.io/spdx-python-model/"
repository = "https://github.com/spdx/spdx-python-model.git"
download = "https://github.com/spdx/spdx-python-model/releases"
documentation = "https://spdx.github.io/spdx-python-model/doc/"
issues = "https://github.com/spdx/spdx-python-model/issues"

[build-system]
requires = [
    "hatchling >= 1.27.0",
    "hatch-build-scripts >= 0.0.4",
    "shacl2code == 1.1.0",
]
build-backend = "hatchling.build"

[[tool.hatch.build.hooks.build-scripts.scripts]]
out_dir = "src/spdx_python_model/bindings"
work_dir = "gen"
clean_out_dir = true
commands = [
    "./generate-bindings"
]
artifacts = [
    "*.py",
    "*.pyi",
]

[tool.hatch.build.targets.sdist]
force-include = {"spdx_model" = "spdx_model"}

[tool.hatch.version]
path = "src/spdx_python_model/version.py"

[tool.mypy]
disallow_any_decorated = true
disallow_any_unimported = true
extra_checks = true
python_version = "3.9"
strict = true
strict_bytes = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pylint.main]
# The generated bindings fail style checks. Ignore them.
ignore-paths = [
    '^src/spdx_python_model/bindings/v3_0_1/.*$',
    '^src/spdx_python_model/bindings/v3_1/.*$',
]
